# cuBool

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  README.md
.github/workflows/: clang-format.yml  self-hosted-cpu.yaml  self-hosted-gpu.yml  self-hosted.yml  ubuntu.yml
cubool/: CMakeLists.txt
cubool/include/cubool/: cubool.h
cubool/sources/: cuBool_About_Get.cpp  cuBool_Common.hpp  cuBool_Finalize.cpp  cuBool_GetAbout.cpp  cuBool_GetDeviceCaps.cpp  cuBool_GetLicenseInfo.cpp  cuBool_GetVersion.cpp  cuBool_Initialize.cpp  cuBool_Kronecker.cpp  cuBool_LicenseInfo_Get.cpp  cuBool_Matrix_Build.cpp  cuBool_Matrix_Duplicate.cpp  cuBool_Matrix_EWiseAdd.cpp  cuBool_Matrix_EWiseMult.cpp  cuBool_Matrix_EWiseMultInverted.cpp  cuBool_Matrix_ExtractCol.cpp  cuBool_Matrix_ExtractPairs.cpp  cuBool_Matrix_ExtractRow.cpp  cuBool_Matrix_ExtractSubMatrix.cpp  cuBool_Matrix_Free.cpp  cuBool_Matrix_GetMarker.cpp  cuBool_Matrix_Marker.cpp  cuBool_Matrix_Ncols.cpp  cuBool_Matrix_New.cpp  cuBool_Matrix_Nrows.cpp  cuBool_Matrix_Nvals.cpp  cuBool_Matrix_Reduce.cpp  cuBool_Matrix_Reduce2.cpp  cuBool_Matrix_SetElement.cpp  cuBool_Matrix_SetMarker.cpp  cuBool_Matrix_Transpose.cpp  cuBool_MxM.cpp  cuBool_MxV.cpp  cuBool_SetupLogger.cpp  cuBool_Vector_Build.cpp  cuBool_Vector_Duplicate.cpp  cuBool_Vector_EWiseAdd.cpp  cuBool_Vector_EWiseMult.cpp  cuBool_Vector_ExtractSubVector.cpp  cuBool_Vector_ExtractValues.cpp  (+10 more)
cubool/sources/backend/: backend_base.hpp  matrix_base.hpp  vector_base.hpp
cubool/sources/core/: config.hpp  error.hpp  library.cpp  library.hpp  matrix.cpp  matrix.hpp  object.cpp  object.hpp  vector.cpp  vector.hpp  version.hpp
cubool/sources/cuda/: cuda_backend.cu  cuda_backend.hpp  cuda_instance.cpp  cuda_instance.cu  cuda_instance.hpp  cuda_matrix.cu  cuda_matrix.hpp  cuda_matrix_build.cu  cuda_matrix_ewiseadd.cu  cuda_matrix_ewisemult.cu  cuda_matrix_ewisemult_inverted.cu  cuda_matrix_extract.cu  cuda_matrix_extract_sub_matrix.cu  cuda_matrix_kronecker.cu  cuda_matrix_multiply.cu  cuda_matrix_reduce.cu  cuda_matrix_transpose.cu  cuda_vector.cu  cuda_vector.hpp  cuda_vector_ewiseadd.cu  cuda_vector_ewisemult.cu  cuda_vector_mxv.cu  cuda_vector_reduce.cu  cuda_vector_vxm.cu  instance.cpp  instance.cu  instance.hpp  matrix_csr.cu  matrix_csr.hpp  matrix_csr_build.cpp  matrix_csr_build.cu  matrix_csr_ewiseadd.cu  matrix_csr_extract.cpp  matrix_csr_extract.cu  matrix_csr_extract_sub_matrix.cu  matrix_csr_kronecker.cu  matrix_csr_multiply.cu  matrix_csr_multiply_add.cu  matrix_csr_multiply_sum.cu  matrix_csr_reduce.cu  (+3 more)
cubool/sources/cuda/details/: device_allocator.cuh  host_allocator.hpp  meta.hpp  sp_vector.hpp
cubool/sources/cuda/kernels/: bin_search.cuh  dense_common.cuh  dense_multiply_add.cuh  matrix_csr_spkron.cuh  matrix_csr_spmerge.cuh  matrix_csr_spreduce.cuh  matrix_csr_spsubmatrix.cuh  slow_sort.cuh  spewiseadd.cuh  spewisemult.cuh  spewisemultinverted.cuh  spgemtv.cuh  spgemv.cuh  spgemv_t.cuh  spkron.cuh  spmerge.cuh  spreduce.cuh  spsubmatrix.cuh  sptranspose.cuh  sptranspose2.cuh
cubool/sources/io/: logger.cpp  logger.hpp
cubool/sources/sequential/: sq_backend.cpp  sq_backend.hpp  sq_coo_data.hpp  sq_csr_data.hpp  sq_data.hpp  sq_ewiseadd.cpp  sq_ewiseadd.hpp  sq_ewisemult.cpp  sq_ewisemult.hpp  sq_ewisemultinverted.cpp  sq_ewisemultinverted.hpp  sq_exclusive_scan.hpp  sq_kronecker.cpp  sq_kronecker.hpp  sq_matrix.cpp  sq_matrix.hpp  sq_reduce.cpp  sq_reduce.hpp  sq_spgemm.cpp  sq_spgemm.hpp  sq_spgemv.cpp  sq_spgemv.hpp  sq_submatrix.cpp  sq_submatrix.hpp  sq_subvector.cpp  sq_subvector.hpp  sq_transpose.cpp  sq_transpose.hpp  sq_vector.cpp  sq_vector.hpp
cubool/sources/utils/: algo_utils.hpp  csr_utils.cpp  csr_utils.hpp  data_utils.cpp  data_utils.hpp  exclusive_scan.hpp  timer.hpp
cubool/tests/: CMakeLists.txt  test_basic_cuda.cu  test_dummy.cpp  test_library_api.cpp  test_matrix_csr.cpp  test_matrix_csr_performance.cpp  test_matrix_dense.cpp  test_matrix_dense_vs_naive.cpp  test_matrix_element.cpp  test_matrix_ewiseadd.cpp  test_matrix_ewisemult.cpp  test_matrix_ewisemult_inverted.cpp  test_matrix_extract_sub_matrix.cpp  test_matrix_extract_vector.cpp  test_matrix_kronecker.cpp  test_matrix_misc.cpp  test_matrix_mxm.cpp  test_matrix_reduce.cpp  test_matrix_setup.cpp  test_matrix_sub_matrix.cpp  test_matrix_transpose.cpp  test_vector_element.cpp  test_vector_ewiseadd.cpp  test_vector_ewisemult.cpp  test_vector_misc.cpp  test_vector_mxv.cpp  test_vector_sub_vector.cpp  test_vector_vxm.cpp
cubool/tests/utils/: test_common.hpp
cubool/utils/testing/: matrix.hpp  matrix_ewise_add.hpp  matrix_ewiseadd.hpp  matrix_ewisemult.hpp  matrix_generator.hpp  matrix_kronecker.hpp  matrix_mxm.hpp  matrix_printing.hpp  matrox_printing.hpp  pair.hpp  testing.hpp  timer.hpp  vector.hpp  vector_functors.hpp
docs/examples/: python_examples.md  transitive_closure_cpp.md
include/cubool/: cubool.h  cubool_build.h.in  cubool_types.h  cubool_version.h
pycubool/: README.md  test_app.py
pycubool/pycubool/: __init__.py  add.py  bridge.py  kron.py  matrix.py  mxm.py  wrapper.py
pycubool/tests/: test_example.py
python/: LICENSE  README.md  examples.py  features.py  publish_pypi.sh  publish_t_pypi.sh  run_tests.sh  setup.py  test_app.py
python/demo/: placeholder.txt
python/examples/: add_example.py  basic.py  create_example.py  dup_example.py  (+11 more)
scripts/: install_cuda_ubuntu.sh  run_tests_all.sh  run_tests_fallback.sh  test_run_fallback.sh  tests_run_all.sh  tests_run_fallback.sh
tests/: CMakeLists.txt  test_basic_cuda.cu  test_dummy.cpp  test_library_api.cpp  test_library_resources.cpp  test_matrix_csr.cpp  test_matrix_csr_performance.cpp  test_matrix_dense.cpp  test_matrix_dense_vs_naive.cpp
tests/naive/: CMakeLists.txt
tests/naive-gpu/: CMakeLists.txt  GpuMatrix.cpp  GpuMatrix.h  Matrix.h  Multiplication.cu  Multiplication.h  Parameters.h  README.md
tests/naive/naive-gpu/: Multiplication.cu  Parameters.h
tests/naive/naive-gpu-shared/: Matrix.h  Multiplication.cu  Multiplication.h
tests/utils/: test_common.hpp
(+1284 files in other folders)
