add_executable(test_basic_cuda test_basic_cuda.cu)
target_link_libraries(test_basic_cuda PUBLIC gtest)
target_compile_features(test_basic_cuda PUBLIC cxx_std_11)
set_target_properties(test_basic_cuda PROPERTIES CXX_STANDARD 11)
set_target_properties(test_basic_cuda PROPERTIES CXX_STANDARD_REQUIRED YES)
set_target_properties(test_basic_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

add_executable(test_library_api test_library_api.cpp)
target_link_libraries(test_library_api PUBLIC cubool)
target_link_libraries(test_library_api PUBLIC gtest)

add_executable(test_matrix_dense test_matrix_dense.cpp)
target_link_libraries(test_matrix_dense PUBLIC cubool)
target_link_libraries(test_matrix_dense PUBLIC gtest)

add_subdirectory(naive-gpu)
add_executable(test_matrix_dense_vs_naive test_matrix_dense_vs_naive.cpp)
target_link_libraries(test_matrix_dense_vs_naive PUBLIC cubool)
target_link_libraries(test_matrix_dense_vs_naive PUBLIC gtest)
target_link_libraries(test_matrix_dense_vs_naive PUBLIC naive_gpu)


